fix tab3 updat button

--- a/app/templates/tab3.html
+++ b/app/templates/tab3.html
@@ -58,7 +58,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% for item in status_group.items %}
+                                        {% for item in status_group.item_list %}
                                             <tr>
                                                 <td>{{ item.tag_id }}</td>
                                                 <td>
