Tab 3: Fixed naming conflict by renaming 'items' to 'item_list'; v63

--- a/app/templates/tab3.html
+++ b/app/templates/tab3.html
@@ -81,7 +81,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% for item in group.items %}
+                                        {% for item in group.item_list %}
                                             <tr>
                                                 <td>{{ item.tag_id }}</td>
                                                 <td>{{ item.rental_class_id }}</td>
