--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
-    <!-- Bootstrap CSS from static/lib/bootstrap/ -->
-    <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css">
-    <!-- Application CSS; uses common.css after style.css rename -->
-    <link rel="stylesheet" href="/static/css/common.css">
+    <title>RFID Dashboard</title>
+    <link href="{{ url_for('static', filename='lib/bootstrap/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/common.css') }}?v={{ cache_bust }}" rel="stylesheet">
     {% block head %}
     {% if request.path == '/tab/1' %}
-        <!-- Tab 1 specific head content -->
+        <link href="{{ url_for('static', filename='css/tab1.css') }}?v={{ cache_bust }}" rel="stylesheet">
     {% elif request.path == '/tab/5' %}
-        <!-- Tab 5 specific head content -->
+        <link href="{{ url_for('static', filename='css/tab5.css') }}?v={{ cache_bust }}" rel="stylesheet">
     {% elif request.path == '/tab/2' or request.path == '/tab/4' %}
-        <!-- Tab 2/4 specific head content -->
+        <link href="{{ url_for('static', filename='css/tab2_4.css') }}?v={{ cache_bust }}" rel="stylesheet">
     {% endif %}
     {% endblock %}
     {% block extra_head %}{% endblock %}
@@ -22,60 +20,64 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">RFID DASHBOARD</a>
+            <a class="navbar-brand" href="{{ url_for('home.index') }}">RFID DASHBOARD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link {{ 'active' if request.path == '/home' or request.path == '/' else '' }}" href="{{ url_for('home.index') }}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/tab/1">Rental Inventory</a>
+                        <a class="nav-link {{ 'active' if request.path == '/tab/1' else '' }}" href="{{ url_for('tab1.tab1_view') }}">Rental Inventory</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/tab/2">Open Contracts</a>
+                        <a class="nav-link {{ 'active' if request.path == '/tab/2' else '' }}" href="{{ url_for('tab2.tab2_view') }}">Open Contracts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/tab/3">Service</a>
+                        <a class="nav-link {{ 'active' if request.path == '/tab/3' else '' }}" href="{{ url_for('tab3.tab3_view') }}">Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/tab/4">Laundry Contracts</a>
+                        <a class="nav-link {{ 'active' if request.path == '/tab/4' else '' }}" href="{{ url_for('tab4.tab4_view') }}">Laundry Contracts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/tab/5">Resale</a>
+                        <a class="nav-link {{ 'active' if request.path == '/tab/5' else '' }}" href="{{ url_for('tab5.tab5_view') }}">Resale</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/categories">Manage Categories</a>
+                        <a class="nav-link {{ 'active' if request.path == '/categories' else '' }}" href="{{ url_for('categories.categories_view') }}">Manage Categories</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
 
-    <!-- Bootstrap JS bundle from static/lib/bootstrap/ -->
-    <script src="/static/lib/bootstrap/bootstrap.bundle.min.js"></script>
-    <!-- HTMX for other tabs; ensure static/js/htmx.min.js exists -->
-    <script src="/static/js/htmx.min.js"></script>
+    <script src="{{ url_for('static', filename='lib/bootstrap/bootstrap.bundle.min.js') }}"></script>
     {% block scripts %}
         {% if request.path == '/tab/1' %}
-            <script src="/static/js/tab1.js"></script>
+            <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab1.js') }}?v={{ cache_bust }}"></script>
         {% elif request.path == '/tab/5' %}
-            <script src="/static/js/tab5.js"></script>
+            <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab5.js') }}?v={{ cache_bust }}"></script>
         {% elif request.path == '/tab/2' %}
-            <script src="/static/js/common.js"></script>
-            <script src="/static/js/tab.js"></script>
+            <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab2.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}"></script>
         {% elif request.path == '/tab/4' %}
-            <script src="/static/js/common.js"></script>
-            <script src="/static/js/tab.js"></script>
+            <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab4.js') }}?v={{ cache_bust }}"></script>
         {% elif request.path == '/tab/3' %}
-            <script src="/static/js/common.js?v={{ cache_bust }}"></script>
-            <script src="/static/js/tab3.js?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab3.js') }}?v={{ cache_bust }}"></script>
         {% endif %}
     {% endblock %}
 </body>
