--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,14 +20,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('home.index') }}">RFID DASHBOARD</a>
+            <a class="navbar-brand" href="{{ url_for('home.home') }}">RFID DASHBOARD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {{ 'active' if request.path == '/home' or request.path == '/' else '' }}" href="{{ url_for('home.index') }}">Home</a>
+                        <a class="nav-link {{ 'active' if request.path == '/home' or request.path == '/' else '' }}" href="{{ url_for('home.home') }}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {{ 'active' if request.path == '/tab/1' else '' }}" href="{{ url_for('tab1.tab1_view') }}">Rental Inventory</a>
