Fixed 500 errors: corrected endpoints in base.html and home.html, handled duplicate key in refresh.py, and fixed tab5.html link

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,7 +45,7 @@
                         <a class="nav-link {{ 'active' if request.path == '/tab/5' else '' }}" href="{{ url_for('tab5.tab5_view') }}">Resale</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {{ 'active' if request.path == '/categories' else '' }}" href="{{ url_for('categories.categories_view') }}">Manage Categories</a>
+                        <a class="nav-link {{ 'active' if request.path == '/categories' else '' }}" href="{{ url_for('categories.manage_categories') }}">Manage Categories</a>
                     </li>
                 </ul>
             </div>
