--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,55 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RFID Dashboard</title>
-    <link href="{{ url_for('static', filename='lib/bootstrap/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/common.css') }}?v={{ cache_bust }}" rel="stylesheet">
+    <title>{% block title %}RFID Dashboard{% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='lib/bootstrap/bootstrap.min.css') }}">
     {% block head %}
     {% if request.path == '/tab/1' %}
-        <link href="{{ url_for('static', filename='css/tab1.css') }}?v={{ cache_bust }}" rel="stylesheet">
     {% elif request.path == '/tab/5' %}
-        <link href="{{ url_for('static', filename='css/tab5.css') }}?v={{ cache_bust }}" rel="stylesheet">
     {% elif request.path == '/tab/2' or request.path == '/tab/4' %}
-        <link href="{{ url_for('static', filename='css/tab2_4.css') }}?v={{ cache_bust }}" rel="stylesheet">
+        <script src="{{ url_for('static', filename='lib/htmx/htmx.min.js') }}"></script> <!-- Removed defer -->
     {% endif %}
     {% endblock %}
     {% block extra_head %}{% endblock %}
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('home.home') }}">RFID DASHBOARD</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link {{ 'active' if request.path == '/home' or request.path == '/' else '' }}" href="{{ url_for('home.home') }}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {{ 'active' if request.path == '/tab/1' else '' }}" href="{{ url_for('tab1.tab1_view') }}">Rental Inventory</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {{ 'active' if request.path == '/tab/2' else '' }}" href="{{ url_for('tab2.tab2_view') }}">Open Contracts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {{ 'active' if request.path == '/tab/3' else '' }}" href="{{ url_for('tab3.tab3_view') }}">Service</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {{ 'active' if request.path == '/tab/4' else '' }}" href="{{ url_for('tab4.tab4_view') }}">Laundry Contracts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {{ 'active' if request.path == '/tab/5' else '' }}" href="{{ url_for('tab5.tab5_view') }}">Resale</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {{ 'active' if request.path == '/categories' else '' }}" href="{{ url_for('categories.manage_categories') }}">Manage Categories</a>
-                    </li>
-                </ul>
-            </div>
+        <a class="navbar-brand" href="/">RFID DASHBOARD</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab/1">Rental Inventory</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab/2">Open Contracts</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab/3">Service</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab/4">Laundry Contracts</a></li>
+                <li class="nav-item"><a class="nav-link" href="/tab/5">Resale</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('categories.manage_categories') }}">Manage Categories</a></li>
+            </ul>
         </div>
     </nav>
-
+    
     <div class="container mt-4">
         {% block content %}{% endblock %}
     </div>
@@ -59,23 +40,23 @@
     <script src="{{ url_for('static', filename='lib/bootstrap/bootstrap.bundle.min.js') }}"></script>
     {% block scripts %}
         {% if request.path == '/tab/1' %}
-            <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/expand_old.js') }}?v={{ cache_bust }}"></script>
             <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}"></script>
             <script src="{{ url_for('static', filename='js/tab1.js') }}?v={{ cache_bust }}"></script>
         {% elif request.path == '/tab/5' %}
-            <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/expand_old.js') }}?v={{ cache_bust }}"></script>
             <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}"></script>
             <script src="{{ url_for('static', filename='js/tab5.js') }}?v={{ cache_bust }}"></script>
         {% elif request.path == '/tab/2' %}
-            <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}"></script>
-            <script src="{{ url_for('static', filename='js/tab2.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/expand_old.js') }}?v={{ cache_bust }}"></script>
             <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/tab2.js') }}?v={{ cache_bust }}"></script>
         {% elif request.path == '/tab/4' %}
-            <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/expand_old.js') }}?v={{ cache_bust }}"></script>
             <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}"></script>
             <script src="{{ url_for('static', filename='js/tab4.js') }}?v={{ cache_bust }}"></script>
         {% elif request.path == '/tab/3' %}
-            <script src="{{ url_for('static', filename='js/common.js') }}?v={{ cache_bust }}"></script>
+            <script src="{{ url_for('static', filename='js/expand_old.js') }}?v={{ cache_bust }}"></script>
             <script src="{{ url_for('static', filename='js/tab.js') }}?v={{ cache_bust }}"></script>
             <script src="{{ url_for('static', filename='js/tab3.js') }}?v={{ cache_bust }}"></script>
         {% endif %}
